# LibErrorInterceptor

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENCE  README.md  TODO  TODO.md  build.bat  build_debug.sh  build_release.bat  build_release.sh  clean.sh  valgrind.sh
examples/: logger_example.c  logger_example2.c  logger_example3.c  stacktrace_example.c  stacktrace_example2.c  test_signal_seg.c
src/ei/: alloc.h  bool.h  check_parameter.h  ei.h  errorinterceptor.h  init.c  init.h
src/ei/error/: error.c  error.h  internal_error.c  internal_error.h
src/ei/logger/: logger.c  logger.h  logger_manager.c  logger_manager.h  logger_struct.h
src/ei/stacktrace/: stacktrace.c  stacktrace.h  stacktrace_struct.h
src/ei/string/: string_builder.c  string_builder.h  string_utility.c  string_utility.h
src/ei/thread/: thread_mutex.c  thread_mutex.h  thread_storage.c  thread_storage.h
src/errorinterceptor/: alloc.h  check_parameter.h  errorinterceptor.h  init.c  init.h
src/errorinterceptor/error/: error.c  error.h  internal_error.c  internal_error.h
src/errorinterceptor/logger/: logger.c  logger.h  logger_manager.c  logger_manager.h  logger_struct.h
src/errorinterceptor/stacktrace/: stacktrace.c  stacktrace.h  stacktrace_struct.h
src/errorinterceptor/string/: string_builder.c  string_builder.h  string_utility.c  string_utility.h
src/errorinterceptor/thread/: thread_mutex.c  thread_mutex.h  thread_storage.c  thread_storage.h
